--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bootstrap-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Gowtham212088.github.io/React-bootstrap",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.1",
@@ -20,7 +21,9 @@
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run built",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "github-pages": "^3.0.2"
   }
 }
